i18n and TTS audio settings

--- a/frontend/src/data/locales/en/Home.json
+++ b/frontend/src/data/locales/en/Home.json
@@ -56,5 +56,35 @@
     "sendFrameToAllAgents": "Send frame to all agents",
     "captureControls": "Capture Controls",
     "checkingWebcam": "Checking webcam status...",
-    "noDetections": "No detections yet."
+    "noDetections": "No detections yet.",
+    "detectionResult": "Detection Result",
+    "processedImage": "Processed Image",
+    "analysisResult": "Analysis Result",
+    "processingDetails": "Processing Details",
+    "captured": "Captured",
+    "processingTime": "Processing Time",
+    "ramUsage": "RAM Usage",
+    "speak": "Speak",
+    "stop": "Stop",
+    "processedWebcamImage": "Processed webcam image",
+    "startAgentMessage": "Start an agent to see analysis results here",
+    "deleteDetection": "×",
+    "gpu": "GPU",
+    "cpu": "CPU",
+    "loading": "Loading...",
+    "memoryUnit": "MB",
+    "timeUnit": "s",
+    "refreshWebcam": "Refresh webcam",
+    "selectWebcam": "Select webcam",
+    "cannotEditWhileProcessing": "Cannot edit while processing",
+    "defaultUserPrompt": "What do you see in this image?",
+    "audioSettings": "Audio Settings",
+    "voiceSettings": "Voice Settings",
+    "voice": "Voice",
+    "selectVoice": "Select voice",
+    "speechRate": "Speech Rate",
+    "speechPitch": "Speech Pitch",
+    "speechVolume": "Volume",
+    "testVoice": "Test Voice",
+    "testText": "Hello, this is a test of the selected voice settings."
 }
