--- a/frontend/src/data/locales/en/PersonaForm.json
+++ b/frontend/src/data/locales/en/PersonaForm.json
@@ -17,6 +17,45 @@
   "systemPromptPlaceholder": "Define the persona's role and instructions.",
   "systemPromptHelp": "Instructions for how the agent should behave.",
   "promptRequired": "System prompt is required.",
+  "userPromptTemplate": "User Prompt Template",
+  "userPromptPlaceholder": "e.g., 'Detect fire in this image', 'What objects do you see?'",
+  "userPromptHelp": "This will be sent with each image for analysis",
+  "userPromptRequired": "User prompt is required.",
+  "technicalConfiguration": "Technical Configuration",
+  "computeDevice": "Compute Device",
+  "autoDetect": "Auto-detect",
+  "gpuCuda": "GPU (CUDA)",
+  "cpuOnly": "CPU Only",
+  "loadingCapabilities": "Loading...",
+  "selectDevice": "Select device",
+  "loadingDeviceCapabilities": "Checking device capabilities...",
+  "deviceCapabilitiesHelp": "GPU is faster, CPU is more compatible",
+  "deviceCapabilitiesNoGpu": "GPU not available - CPU only",
+  "quantization": "4-bit Quantization",
+  "quantizationEnabled": "Enabled (~10GB RAM)",
+  "quantizationDisabled": "Disabled (~20GB RAM)",
+  "selectQuantization": "Select quantization",
+  "quantizationEnabledHelp": "Uses ~15GB RAM, faster loading, slightly reduced quality",
+  "quantizationDisabledHelp": "Uses ~20GB RAM, slower loading, full precision quality",
+  "generationParameters": "Generation Parameters",
+  "maxResponseLength": "Max Response Length",
+  "maxLengthHelp": "Maximum tokens to generate (1-8192)",
+  "samplingMode": "Sampling Mode",
+  "selectSamplingMode": "Select sampling mode",
+  "samplingModeVaried": "Sampling (More varied)",
+  "samplingModeDeterministic": "Greedy (More deterministic)",
+  "samplingModeHelp": "Sampling uses top-k, greedy always picks most likely",
+  "enableTTS": "Read aloud detection results",
+  "enableTTSHelp": "Automatically read detection results using text-to-speech",
+  "intervalOptimal": "Optimal",
+  "intervalConservative": "Conservative",
+  "intervalRelaxed": "Relaxed",
+  "intervalSlow": "Slow",
+  "intervalBasedOnProcessing": "Based on processing time",
+  "intervalExtraBuffer": "50% extra buffer",
+  "intervalDoubleBuffer": "100% extra buffer",
+  "intervalLowResource": "Low resource usage",
+  "processingTimeHelp": "Processing time: ~{time}s for {tokens} tokens ({rate} tokens/sec)",
   "validationErrorTitle": "Missing Required Fields",
   "validationErrorDescription": "Please fill out all required fields before saving.",
   "cancel": "Cancel",
@@ -27,5 +66,6 @@
   "interval10": "10 seconds",
   "interval20": "20 seconds",
   "interval30": "30 seconds",
-  "intervalHelp": "Set how often this agent runs (seconds)."
+  "intervalHelp": "Set how often this agent runs (seconds).",
+  "loadingDeviceInfo": "Loading device info..."
 }
