--- a/frontend/src/data/locales/en/Home.json
+++ b/frontend/src/data/locales/en/Home.json
@@ -36,6 +36,10 @@
     "lastResult": "Last result",
     "resume": "Resume",
     "pause": "Pause",
+    "pausePending": "Pausing...",
+    "pausePendingTooltip": "Will pause after current processing completes",
+    "pauseProcessingTooltip": "Will pause after current image finishes processing",
+    "pausingAfterProcessing": "Pausing after processing",
     "sendFrameToAgent": "Send frame to {{agent}}",
     "personas": "Personas",
     "addPersona": "Add persona",
