--- a/frontend/src/data/locales/en/PersonaForm.json
+++ b/frontend/src/data/locales/en/PersonaForm.json
@@ -31,12 +31,6 @@
   "loadingDeviceCapabilities": "Checking device capabilities...",
   "deviceCapabilitiesHelp": "GPU is faster, CPU is more compatible",
   "deviceCapabilitiesNoGpu": "GPU not available - CPU only",
-  "quantization": "4-bit Quantization",
-  "quantizationEnabled": "Enabled (~10GB RAM)",
-  "quantizationDisabled": "Disabled (~20GB RAM)",
-  "selectQuantization": "Select quantization",
-  "quantizationEnabledHelp": "Uses ~15GB RAM, faster loading, slightly reduced quality",
-  "quantizationDisabledHelp": "Uses ~20GB RAM, slower loading, full precision quality",
   "generationParameters": "Generation Parameters",
   "maxResponseLength": "Max Response Length",
   "maxLengthHelp": "Maximum tokens to generate (1-8192)",
@@ -47,6 +41,8 @@
   "samplingModeHelp": "Sampling uses top-k, greedy always picks most likely",
   "enableTTS": "Read aloud detection results",
   "enableTTSHelp": "Automatically read detection results using text-to-speech",
+  "enabled": "Enabled",
+  "disabled": "Disabled",
   "intervalOptimal": "Optimal",
   "intervalConservative": "Conservative",
   "intervalRelaxed": "Relaxed",
@@ -55,7 +51,7 @@
   "intervalExtraBuffer": "50% extra buffer",
   "intervalDoubleBuffer": "100% extra buffer",
   "intervalLowResource": "Low resource usage",
-  "processingTimeHelp": "Processing time: ~{time}s for {tokens} tokens ({rate} tokens/sec)",
+  "processingTimeHelp": "Processing time: ~{{time}}s for {{tokens}} tokens ({{rate}} tokens/sec)",
   "validationErrorTitle": "Missing Required Fields",
   "validationErrorDescription": "Please fill out all required fields before saving.",
   "cancel": "Cancel",
