--- a/frontend/src/data/locales/en/PersonaForm.json
+++ b/frontend/src/data/locales/en/PersonaForm.json
@@ -1,6 +1,7 @@
 {
   "editTitle": "Edit Persona",
   "createTitle": "Create a New Persona",
+  "viewTitle": "View Persona Details",
   "description": "Configure the details for this persona.",
   "choosePersona": "Choose a Persona",
   "selectPlaceholder": "Select or create a persona",
@@ -43,6 +44,12 @@
   "enableTTSHelp": "Automatically read detection results using text-to-speech",
   "enabled": "Enabled",
   "disabled": "Disabled",
+  "captureMode": "Capture Mode",
+  "captureModeHelp": "Choose how frames are captured for analysis",
+  "captureModeInterval": "Automatic (Time-based)",
+  "captureModeManual": "Manual (Button-click)",
+  "captureModeIntervalDesc": "Captures frames at regular intervals",
+  "captureModeManualDesc": "Captures frames only when button is clicked",
   "intervalOptimal": "Optimal",
   "intervalConservative": "Conservative",
   "intervalRelaxed": "Relaxed",
@@ -55,6 +62,7 @@
   "validationErrorTitle": "Missing Required Fields",
   "validationErrorDescription": "Please fill out all required fields before saving.",
   "cancel": "Cancel",
+  "close": "Close",
   "save": "Save",
   "saving": "Saving...",
   "interval": "Interval",
