--- a/frontend/src/data/locales/en/Home.json
+++ b/frontend/src/data/locales/en/Home.json
@@ -67,9 +67,12 @@
     "processedImage": "Processed Image",
     "analysisResult": "Analysis Result",
     "processingDetails": "Processing Details",
-    "captured": "Captured",
-    "processingTime": "Processing Time",
-    "ramUsage": "RAM Usage",
+    "agentLabel": "Agent:",
+    "captured": "Captured:",
+    "processingTime": "Processing Time:",
+    "ramUsage": "RAM Usage:",
+    "viewAgent": "View Agent",
+    "agentDeleted": "(Agent deleted)",
     "speak": "Speak",
     "stop": "Stop",
     "copy": "Copy",
